--- a/day-one-with-sanity/package.json
+++ b/day-one-with-sanity/package.json
@@ -15,9 +15,11 @@
     "sanity"
   ],
   "dependencies": {
+    "@sanity/document-internationalization": "^3.0.1",
     "@sanity/vision": "^3.55.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.3.0",
     "sanity": "^3.55.0",
     "sanity-plugin-documents-pane": "^2.3.0",
     "styled-components": "^6.1.8"
